# article-008-static

./: .clang-format  CMakeLists.txt  config_file.yml  static-funcs-1.cpp  static-funcs-2.cpp
module-config/: arm-config.cpp  arm-config.h
